--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - run: make test
+ cross:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 30
+    steps:
+    - uses: actions/checkout@master
+    - run: make artifacts
