--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,22 @@ on:
     branches:
       - master
 jobs:
+  project:
+    name: Project Checks
+    runs-on: ubuntu-20.04
+    timeout-minutes: 20
+    steps:
+    - uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.x
+    - uses: actions/checkout@v2
+      with:
+        path: src/github.com/containerd/fuse-overlayfs-snapshotter
+        fetch-depth: 25
+    - uses: containerd/project-checks@v1
+      with:
+        working-directory: src/github.com/containerd/fuse-overlayfs-snapshotter
+
  test:
     runs-on: ubuntu-20.04
     timeout-minutes: 30
