--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: 1.17.x
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         path: src/github.com/containerd/fuse-overlayfs-snapshotter
         fetch-depth: 25
@@ -27,15 +27,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        fuse-overlayfs: [v1.0.0, v1.8, main]
+        fuse-overlayfs: [v1.0.0, v1.8.2, main]
     env:
       FUSEOVERLAYFS_COMMIT: "${{ matrix.fuse-overlayfs }}"
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v3
     - run: make test
+
   cross:
     runs-on: ubuntu-20.04
     timeout-minutes: 30
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/setup-go@v2
+      with:
+        go-version: 1.17.x
+    - uses: actions/checkout@v3
     - run: make artifacts
