CI: fix "Error: Could not find subject at path _output/*"
Fix issue 134

Signed-off-by: Akihiro Suda <akihiro.suda.cz@hco.ntt.co.jp>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,8 +48,7 @@ jobs:
         EOF
     - uses: actions/attest-build-provenance@v2
       with:
-        subject-path: |
-          _output/*
+        subject-path: _output/*
     - name: "Create release"
       working-directory:  go/src/github.com/containerd/fuse-overlayfs-snapshotter
       env:
