CI: update subject-path in release workflow for correct artifact location
Signed-off-by: Takumi Takahashi <takumiiinn@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
         EOF
     - uses: actions/attest-build-provenance@v2
       with:
-        subject-path: _output/*
+        subject-path: go/src/github.com/containerd/fuse-overlayfs-snapshotter/_output/*
     - name: "Create release"
       working-directory:  go/src/github.com/containerd/fuse-overlayfs-snapshotter
       env:
